# tauri-plugin-accept-cookie

./: Cargo.toml  README.md  build.rs  package.json
android/: build.gradle.kts  local.properties
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: AllowCookiePlugin.kt
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
permissions/autogenerated/: reference.md
src/: lib.rs  mobile.rs
