[package]
name = "tauri-plugin-accept-cookie"
version = "1.0.0"
authors = [ "Zhang Yao<cineazhan@gmail.com>" ]
description = "A Tauri plugin for accept cookie in android."
homepage = "https://github.com/Cinea4678/tauri-plugin-accept-cookie"
repository = "https://github.com/Cinea4678/tauri-plugin-accept-cookie"
license = "MIT"
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-accept-cookie"

[dependencies]
tauri = { version = "2.0.0-beta.23" }
serde = "1.0"
thiserror = "1.0"

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.18", features = ["build"] }
